[tool.poetry]
name = "gsw-xarray"
version = "0.3.0"
description = "Drop in wrapper for gsw which adds CF standard name and units attributes to xarray results"
authors = ["Andrew Barna <abarna@gmail.com>", "Romain Caneill <romain.caneill@ens-lyon.org>"]
license = "BSD-3-Clause"

readme = "README.rst"

repository = "https://github.com/DocOtak/gsw-xarray"
documentation = "https://gsw-xarray.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.9"
xarray = ">=0.20.2"
gsw = ">=3.4.0"
cf-xarray = "^0.7.4"
pint-xarray = {version = '^0.3', optional = true}
Pint = {version = ">=0.18", optional = true}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
pre-commit = "^2.17.0"
black = "^22.3.0"
jupyterlab = ">=4.0.4"
netCDF4 = ">=1.6.5"
toml = ">=0.10.2"
dask = ">=2023.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.4.0"
furo = ">=2022.1.2"
nbsphinx = ">=0.9.2"
netCDF4 = "*"
Pint = "*"
pint-xarray = "*"
dask = "*"

[tool.poetry.extras]
pint = ["Pint", "pint-xarray"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
