[tool.poetry]
name = "gsw-xarray"
version = "0.3.0"
description = "Drop in wrapper for gsw which adds CF standard name and units attributes to xarray results"
authors = ["Andrew Barna <abarna@gmail.com>", "Romain Caneill <romain.caneill@ens-lyon.org>"]
license = "BSD-3-Clause"

readme = "README.rst"

repository = "https://github.com/DocOtak/gsw-xarray"
documentation = "https://gsw-xarray.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.9"
xarray = ">=0.20.2"
gsw = ">=3.4.0"
cf-xarray = "^0.7.4"
pint-xarray = {version = '^0.3', optional = true}
Pint = {version = ">=0.20", optional = true}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
pre-commit = "^2.17.0"
jupyterlab = ">=4.0.4"
netCDF4 = ">=1.6.5"
toml = ">=0.10.2"
dask = ">=2023.1.0"
ruff = "^0.4.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.4.0"
furo = ">=2022.1.2"
nbsphinx = ">=0.9.2"
ipykernel = ">=6.29.4"
netCDF4 = "*"
Pint = "*"
pint-xarray = "*"
dask = "*"

[tool.poetry.extras]
pint = ["Pint", "pint-xarray"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
